# digital-actors

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MESSAGE_SYNC_ANALYSIS.md  MESSAGE_SYNC_IMPLEMENTATION.md  METRICS.md  METRICS_IMPLEMENTATION_SUMMARY.md  NPC_AWARE_EXAMPLE.md  README.md  SCENE_ARCHITECTURE.md  SCENE_ISOLATION_FIX.md  UPDATE_SUMMARY.md  WORLD_DIRECTOR_SYSTEM.md  WORLD_LABS_INTEGRATION.md  ant_server.py  ant_server_base.py  cachedvoiceclient.py  constants.py  dialogue_manager.py  dialogue_state.py  director_rules.py  docker-compose.yml  emotion_engine.py  emotion_extractor.py  encryption_utils.py  escalation_tracker.py  example_logging.py  exceptions.py  generate_encryption_key.py  grafana-dashboard.json  hook-iconic_tools.py  logging_config.py  metrics.py  player_memory.py  post_speak_hooks.py  (+17 more)
.github/workflows/: README.md  ci.yml  docker.yml
Documents/: Digital-Actors-DESIGN_DOCUMENT.md  IconicDetecives-MaraVane  Iron Lung - Digital Actor Screen Test.md  LifeRaft_experience-flow.mermaid  SUBMARINE_FLOWCHART.md  SUBMARINE_FLOW_DIAGRAM.md
archive/: CREATE_CHARACTER.md  EMOTION_PIPELINE_IMPLEMENTATION.md  REFACTORING_SUMMARY.md
art/: Phone_01.glb
audio/: README.md  __init__.py
characters/: __init__.py  base.py  captain_hale.py  clippy.py  custom.py  detective.py  eliza.py  engineer.py  judge.py  kovich.py  mara_vane.py  wizard.py
characters/backstories/: captain_hale_backstory.md  clippy_backstory.md
config/: __init__.py  scene_mappings.json
docs/:  Pressure-Point.md  CHARACTER_IDENTITY_LEAK_ANALYSIS.md  CLAUDE_DESIGN_TEMPLATE.md  CONTRIBUTING.md  DEPLOYMENT.md  Digital-Actors-DESIGN_DOCUMENT.md  EXPLAINER.md  Foxhole_script.md  INTERRUPTION_SYSTEM.md  James_Kovich.md  LOGGING.md  MONITORING.md  PLAYER_MEMORY_SYSTEM.md  REFACTORING_SESSION_MODULES.md  SUBMARINE_FLOWCHART.md  SUBMARINE_FLOW_DIAGRAM.md  life-raft.md
docs/scenes/: README.md  conversation.md  crown_court.md  crown_court_3d-art-prompt.md  foxhole.md  iconic_detectives.md  iconic_detectives_3d-art-prompt.md  introduction.md  life_raft.md  life_raft_3d-art-prompt.md  merlins_workshop.md  merlins_workshop_3d-art-prompt.md  pressure_point.md  pressure_point_3d-art-prompt.md  welcome.md  welcome_3d-art-prompt.md
legacy_files/: README.md  start-http.sh  start.sh  websocket.py
legacy_files/project_one_demo/: generate_project1_dialogue.py  model_utils.py
legacy_files/qa_research/: evaluate_dialogue.py  generate_dialogue.py
llm_prompt_core/: README.md  __init__.py  types.py  utils.py
llm_prompt_core/models/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
llm_prompt_core/prompts/: __init__.py  builder.py  templates.py
murrays_work/: README.txt  evaluate_dialogues.ipynb  evaluate_dialogues_v2.ipynb  results.json
murrays_work/benchmark/: dataset_utils.py  dataset_utils_test.py  dialogue_graph_utils.py  eval_methods.py  movie_review_cleaning.ipynb  results_vis_borja.ipynb  scene_retrieval_test.py  task_runner.py
murrays_work/detritus/: generate_dialogue_v1.ipynb  generate_evaluate_dialogue_v1.ipynb  troy_dialogue_full_prompt_1.txt  troy_full_eval_prompt.txt
murrays_work/gdm_collab/: Murray_data_0_metrics_0.ipynb  evaluate_dialogues.ipynb  generate_evaluate_dialogue.ipynb  make_baselines.ipynb  results.json
murrays_work/project_one_demo/: generate_connected_dialogue.ipynb  generate_project1_dialogue.ipynb  summarise_dialogue.ipynb
murrays_work/project_one_murray/: generate_connected_dialogue.ipynb  generate_project1_dialogue.ipynb  summarise_dialogue.ipynb
murrays_work/prompts/: synergy_tests.txt
project_one_demo/: generate_project1_dialogue.py
project_one_demo/prompts/: back_story.txt  dialogue_instruction_prefix.txt  steer_back_instructions.txt
qa_research/: evaluate_dialogue.py  generate_dialogue.py  qa_analysis.ipynb
scenes/: README.md  __init__.py  base.py  conversation.py  crown_court.py  iconic_detectives.py  introduction.py  life_raft.py  life_raft_logic.py  quest.py  submarine.py  welcome.py
scenes/base/: __init__.py  base.py  base_scene.js  handler_base.py  life_raft_handler.py  world_labs_importer.js
scenes/detective/: detective_scene.js  iconic_detectives.py  iconic_detectives_handler.py
scenes/foxhole/: __init__.py  art_prompt.md  camera_config.json  foxhole.py  foxhole_scene.js
scenes/handlers/: __init__.py  base.py  foxhole_handler.py  iconic_detectives_handler.py  life_raft_handler.py  submarine_handler.py
scenes/submarine/: submarine.py  submarine_scene.js
scenes/wizard/: art_prompt.md  camera_config.json  camera_config.json.old  quest.py  (+1 more)
sessions/: __init__.py  dialogue_engine.py  game_state_manager.py  response_handler.py  session_orchestrator.py
tests/: __init__.py  test_database_encryption.py  test_emotion_engine.py  test_emotion_extractor.py  test_eval_security_fix.py  test_llm_base_model.py  test_logging.py  test_player_memory.py  test_pytest_setup.py  test_query_system.py  test_response_queue_race_condition.py  test_scene_condition_integration.py  test_scene_conditions.py  test_sentry.py  test_sessions_refactoring.py  test_task_tracking.py  test_tts_audio_tags.py  test_websocket_auth.py  test_world_director.py  test_xss_prevention.html  test_xss_prevention.js
web/: .eslintrc.json  .prettierrc  README.md  index.html  package.json
(+405 files in other folders)
