[project]
name = "digital-actors"
version = "0.1.0"
description = "LLM-powered character dialogue system with web interface and game integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.8.1",
    "six>=1.16.0",
    "websockets>=13.1,<15.0",
    "numpy",
    "google-genai",
]

[project.optional-dependencies]
kokoro = [
    "pydub",
    "torch",
    "imageio",
    "imageio-ffmpeg",
    "kokoro",
]