[project]
name = "digital-actors"
version = "0.1.0"
description = "LLM-powered character dialogue system with web interface and game integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.8.1",
    "six>=1.16.0",
    "websockets>=13.1,<15.0",
    "numpy",
    "google-genai",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "elevenlabs>=1.0.0",
]

[project.optional-dependencies]
kokoro = [
    "pydub",
    "torch",
    "imageio",
    "imageio-ffmpeg",
    "kokoro",
]
dev = [
    "ruff>=0.4.0",
]

# =============================================================================
# Ruff Configuration - Python Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "legacy_files",
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for dataclasses)
    "SIM108", # ternary operator (sometimes less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["llm_prompt_core", "characters", "scenes"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"