[project]
name = "digital-actors"
version = "0.1.0"
description = "LLM-powered character dialogue system with web interface and game integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.8.1,<14.0",
    "six>=1.16.0,<2.0",
    "websockets>=13.1,<15.0",
    "numpy>=1.24.0,<2.0",
    "google-genai>=0.3.0,<1.0",
    "python-dotenv>=1.0.0,<2.0",
    "aiohttp>=3.9.0,<4.0",
    "elevenlabs>=1.0.0,<2.0",
    "anthropic>=0.20.0,<1.0",
    "openai>=1.0.0,<2.0",
    "langchain-core>=0.1.0,<1.0",
    "pydantic>=2.0.0,<3.0",
    "sentence-transformers>=2.2.0,<3.0",
    "python-json-logger>=2.0.0,<3.0",
    "sentry-sdk[aiohttp]>=2.0.0,<3.0",
    "prometheus-client>=0.19.0,<1.0",
    "cryptography>=41.0.0,<43.0",
]

[project.optional-dependencies]
kokoro = [
    "pydub>=0.25.0,<1.0",
    "torch>=2.0.0,<3.0",
    "imageio>=2.31.0,<3.0",
    "imageio-ffmpeg>=0.4.0,<1.0",
    "kokoro>=0.1.0,<1.0",
]
dev = [
    "ruff>=0.4.0,<1.0",
    "pytest>=7.4.0,<9.0",
    "pytest-cov>=4.1.0,<6.0",
    "pytest-asyncio>=0.21.0,<1.0",
    "pre-commit>=3.0.0,<4.0",
]

# =============================================================================
# Ruff Configuration - Python Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "legacy_files",
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for dataclasses)
    "SIM108", # ternary operator (sometimes less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["llm_prompt_core", "characters", "scenes"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Pytest Configuration - Testing Framework
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=. --cov-report=html --cov-report=term --cov-branch"
asyncio_mode = "auto"

# =============================================================================
# Coverage Configuration - Code Coverage Reporting
# =============================================================================
[tool.coverage.run]
omit = ["tests/*", "venv/*", ".venv/*", "archive/*", "legacy_files/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
